# ooppkcs11rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
ooppkcs11rs/: Cargo.toml  README.md
ooppkcs11rs-test/: Cargo.toml
ooppkcs11rs-test/src/: lib.rs
ooppkcs11rs-types/: Cargo.toml
ooppkcs11rs-types/src/: lib.rs
ooppkcs11rs/src/: lib.rs  main.rs  pkcs11.rs  pkcs11parent.rs  pkcs11types.rs
src/: ipc.rs  lib.rs  main.rs  pkcs11.rs  pkcs11parent.rs  pkcs11types.rs
util/: Makefile  test.cpp
