[package]
name = "ooppkcs11rs"
version = "0.0.1"
authors = ["David Keeler <mozkeeler@gmail.com>"]
build = "build.rs"

[build-dependencies]
bindgen = "^0.25"

[lib]
name = "ooppkcs11rs"
crate-type = ["dylib"]

[dependencies]
ipc-channel = "0.9.0"
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
lazy_static = "^1.0"
