[package]
name = "ooppkcs11rs"
version = "0.0.1"
authors = ["David Keeler <mozkeeler@gmail.com>"]
build = "build.rs"

[build-dependencies]
bindgen = "^0.36"

[lib]
name = "ooppkcs11rs"
crate-type = ["dylib"]

[dependencies]
dlopen = "0.1.3"
dlopen_derive = "0.1.1"
ipc-channel = "0.10.0"
serde_derive = "1.0.45"
serde = "1.0.45"
serde_json = "1.0.17"
lazy_static = "1.0.0"
