[package]
name = "ooppkcs11rs"
version = "0.0.1"
authors = ["David Keeler <mozkeeler@gmail.com>"]
build = "build.rs"

[build-dependencies]
bindgen = "^0.36"

[lib]
name = "ooppkcs11rs"
crate-type = ["dylib"]

[dependencies]
byteorder = "1.2.3"
dlopen = "0.1.3"
dlopen_derive = "0.1.1"
lazy_static = "1.0.0"
libc = "0.2.40"
serde = "1.0.45"
serde_derive = "1.0.45"
serde_json = "1.0.17"
timeout-readwrite = "0.1.0"
