[package]
name = "ooppkcs11rs"
version = "0.0.1"
authors = ["Keeler <mozkeeler@gmail.com>"]

[lib]
name = "ooppkcs11rs"
crate-type = ["dylib"]

[dependencies]
byteorder = "1.2.3"
dlopen = "0.1.3"
dlopen_derive = "0.1.1"
lazy_static = "1.0.0"
libc = "0.2.40"
serde = "1.0.45"
serde_derive = "1.0.45"
serde_json = "1.0.17"
timeout-readwrite = "0.1.0"
